# if(BuildTests)
#   add_subdirectory(Tests)
# endif(BuildTests)

add_custom_target(NearestNeighbor SOURCES
DefaultSearchBest.hpp
FirstValidDescriptor.hpp
KNNSearchAndSort.hpp
KNNBestWrapper.hpp
LinearSearchAlgorithm.hpp
LinearSearchBest.hpp
LinearSearchCriteriaProperty.hpp
LinearSearchKNN.hpp
LinearSearchKNNProperty.hpp
LinearSearchKNNPropertyCombine.hpp
LinearSearchKNNPropertyLimitLocalReuse.hpp
LinearSearchKNNPropertyLimitReuse.hpp
LinearSearchKNNPropertyNoReuse.hpp
LocalOptimizationSearchBestProperty.hpp
metric_space_concept.hpp
metric_space_search.hpp
PassThrough.hpp
PrecomputedNeighbors.hpp
SearchFunctor.hpp
SortByRGBTextureGradient.hpp
StorageAndSearchFunctor.hpp
ThreeStepNearestNeighbor.hpp
topological_search.hpp
TwoStepNearestNeighbor.hpp
TopPatchListOrManual.hpp
VerifyOrManual.hpp
weak_metric_space_concept.hpp
DummyWriter.hpp)

add_subdirectory(LinearSearchBest)
