add_subdirectory(AcceptanceVisitors)
add_subdirectory(DescriptorVisitors)
add_subdirectory(InformationVisitors)
add_subdirectory(SimpleVisitors)

add_custom_target(VisitorsSources SOURCES CompositeInpaintingVisitor.hpp
DefaultInpaintingVisitor.hpp
FeatureVectorInpaintingVisitor.hpp
ImagePatchCreatorVisitor.hpp
ImagePatchInpaintingVisitor.hpp
InpaintingVisitor.hpp
InpaintingVisitorParent.h
ManualSelectionDefaultVisitor.hpp
MatchVerificationVisitor.hpp
NearestNeighborsDefaultVisitor.hpp
NearestNeighborsDisplayVisitor.hpp
PaintPatchVisitor.hpp
RandomDescriptorCreatorVisitor.hpp
ReplayVisitor.hpp
)
