add_subdirectory(AcceptanceVisitors)
add_subdirectory(DescriptorVisitors)
add_subdirectory(InformationVisitors)
add_subdirectory(InpaintingVisitors)

add_custom_target(VisitorsSources SOURCES
FeatureVectorInpaintingVisitor.hpp
ImagePatchCreatorVisitor.hpp
ManualSelectionDefaultVisitor.hpp
MatchVerificationVisitor.hpp
NearestNeighborsDefaultVisitor.hpp
NearestNeighborsDisplayVisitor.hpp
RandomDescriptorCreatorVisitor.hpp
ReplayVisitor.hpp
)
